# freeswitch-mod_isup

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  bearer.h  bearer_megaco.c  bearer_mgcp.c  isup_cgm.c  isup_cgm.h  isup_codec.c  isup_codec.h  isup_m3ua.c  isup_m3ua.h  isup_map.c  isup_map.h  isup_param.c  isup_param.h  isup_proto.h  isup_segment.c  isup_segment.h  isup_sm.c  isup_sm.h  isup_trace.c  isup_trace.h  mod_isup.c
conf/autoload_configs/: isup.conf.xml
docker/: Dockerfile.fs  Dockerfile.sigtran  README.md  cs7-a.cfg  cs7-b.cfg  docker-compose.yml  freeswitch.xml  osmo-mgw.cfg  osmo-stp.cfg  run-sigtran.sh  validate.sh
docker/captures/: isup_m3ua_mgcp.pcap  validate.pcap
docs/: OPERATIONS.md  call-routing.md  configuration.md  fs-cli-commands.md  mod_isup_design.md
specs/: SPEC_COMPARISON.md
test/: isup_fuzz.c  test_cgm.c  test_codec.c  test_conformance  test_conformance.c  test_e2e.c  test_hardening.c  test_map.c  test_segment.c  test_sm.c  test_trace.c
test/conformance/: q784_matrix.md
test/integration/: README.md  docker-compose.yml
test/live/: fs_harness.c  m3ua_node.c  mgcp_probe.py  node.cfg
